[gd_scene load_steps=9 format=3 uid="uid://bsrqu6b5fr4wi"]

[ext_resource type="Script" uid="uid://bmhdtsfkotj15" path="res://scenes/levels/water/water.gd" id="1_0bhgi"]
[ext_resource type="PackedScene" uid="uid://xqt5r4ullpk2" path="res://scenes/player_related/player.tscn" id="1_ppl7k"]
[ext_resource type="PackedScene" uid="uid://qm3bopgobixm" path="res://scenes/levels/water/water_puzzle.tscn" id="2_vhbq1"]
[ext_resource type="PackedScene" uid="uid://bl4h6scfg5nbg" path="res://scenes/other_characters/water_keeper.tscn" id="3_exstt"]
[ext_resource type="Texture2D" uid="uid://6s4ef11jdat8" path="res://final_art/enviornment/water/challenge/puzzle1_Full.png" id="4_d0whp"]
[ext_resource type="PackedScene" uid="uid://c3yfxx7avknuy" path="res://scenes/levels/exit_mirror.tscn" id="6_7203i"]
[ext_resource type="PackedScene" uid="uid://bciu7cpdtxolh" path="res://scenes/levels/hub.tscn" id="7_qwvie"]
[ext_resource type="Texture2D" uid="uid://bvgbxulstgrog" path="res://final_art/enviornment/water/mirror_water.png" id="8_kyxfi"]

[node name="water" type="Node"]
script = ExtResource("1_0bhgi")

[node name="water puzzle" parent="." instance=ExtResource("2_vhbq1")]
offset_left = 571.0
offset_top = -32.999992
offset_right = 611.0
offset_bottom = 7.0000076
scale = Vector2(1.4, 1.4)

[node name="puzzle solution" type="Sprite2D" parent="."]
position = Vector2(346, 61)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_d0whp")

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(524, 262)

[node name="player" parent="." instance=ExtResource("1_ppl7k")]
visible = false
position = Vector2(-689, 586)

[node name="Water Keeper" parent="." instance=ExtResource("3_exstt")]
position = Vector2(518, -139)

[node name="ExitMirror" parent="." instance=ExtResource("6_7203i")]
position = Vector2(518, -293)
next = ExtResource("7_qwvie")

[node name="Sprite2D" parent="ExitMirror" index="0"]
texture = ExtResource("8_kyxfi")

[connection signal="water_solved" from="water puzzle" to="." method="_on_water_puzzle_water_solved"]

[editable path="ExitMirror"]
